--- a/package.json
+++ b/package.json
@@ -118,9 +118,9 @@
     "suppress-warnings": "^1.0.2",
     "tgrid": "^0.8.7",
     "ts-node": "^10.9.1",
-    "ts-patch": "3.0.0-beta3",
+    "ts-patch": "^3.0.0",
     "tstl": "^2.5.13",
-    "typescript": "^5.0.4",
+    "typescript": "^5.1.3",
     "typescript-transform-paths": "^3.4.6",
     "uuid": "^8.3.2",
     "zod": "^3.19.1"
