--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rimraf .next && rimraf .out && next build && next export && next-sitemap",
     "deploy": "node deploy",
-    "dev": "next dev"
+    "dev": "next dev",
+    "prepare": "node raw"
   },
   "repository": {
     "type": "git",
@@ -20,19 +21,27 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@monaco-editor/react": "^4.5.1",
     "@mui/material": "^5.12.0",
+    "lz-string": "^1.5.0",
+    "monaco-editor": "^0.39.0",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-split-pane": "^0.1.92",
+    "typescript": "^5.1.3",
+    "typia": "^4.1.1-dev.20230621"
   },
   "devDependencies": {
-    "@types/node": "18.11.10",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/node": "^18.11.10",
     "@types/react": "^18.0.35",
     "gh-pages": "^5.0.0",
     "next-sitemap": "^4.0.7",
+    "prettier": "^2.8.8",
     "rimraf": "^5.0.0",
-    "typescript": "^4.9.3"
+    "ts-node": "^10.9.1"
   }
 }
