--- a/website/package.json
+++ b/website/package.json
@@ -32,7 +32,7 @@
     "react-dom": "^18.2.0",
     "react-split-pane": "^0.1.92",
     "typescript": "^5.1.3",
-    "typia": "^4.1.1-dev.20230621"
+    "typia": "^4.1.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
