--- a/website/package.json
+++ b/website/package.json
@@ -5,9 +5,9 @@
   "private": true,
   "scripts": {
     "build": "rimraf .next && rimraf .out && next build && next export && next-sitemap",
-    "deploy": "node deploy",
+    "deploy": "node build/deploy",
     "dev": "next dev",
-    "prepare": "node raw"
+    "prepare": "node build/raw"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,7 @@
     "react-dom": "^18.2.0",
     "react-split-pane": "^0.1.92",
     "typescript": "^5.1.3",
-    "typia": "^4.1.1"
+    "typia": "latest"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
