--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "4.1.14",
+  "version": "4.1.15-dev.20230803",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -107,7 +107,7 @@
     "d3": "^5.16.0",
     "eslint-plugin-deprecation": "^1.4.1",
     "express": "^4.18.2",
-    "fast-json-stringify": "^5.4.0",
+    "fast-json-stringify": "^5.8.0",
     "fastify": "^4.9.2",
     "io-ts": "^2.2.19",
     "jsdom": "^21.1.1",
