--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@types/nested-error-stacks": "^2.1.0",
     "@types/node": "^18.15.12",
     "@types/physical-cpu-count": "^2.0.0",
+    "@types/ts-expose-internals": "npm:ts-expose-internals@5.1.6",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
