--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "5.0.5",
+  "version": "5.1.0-dev.20230923",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -72,7 +72,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "5.0.5"
+    "typia": "5.1.0-dev.20230923"
   },
   "peerDependencies": {
     "typescript": ">= 4.8.0"
