--- a/website/package.json
+++ b/website/package.json
@@ -30,7 +30,7 @@
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "5.1.6"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
@@ -41,6 +41,6 @@
     "prettier": "^2.8.8",
     "rimraf": "^5.0.0",
     "ts-node": "^10.9.1",
-    "typia": "^5.0.4"
+    "typia": "^5.0.5"
   }
 }
