--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "5.2.3",
+  "version": "5.2.4",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -81,7 +81,7 @@
     "randexp": "^0.5.3"
   },
   "peerDependencies": {
-    "typescript": ">= 4.8.0"
+    "typescript": ">=4.8.0 <5.3.0"
   },
   "devDependencies": {
     "@fastify/type-provider-typebox": "^3.5.0",
