--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "5.2.3",
+  "version": "5.2.4",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -72,10 +72,10 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "5.2.3"
+    "typia": "5.2.4"
   },
   "peerDependencies": {
-    "typescript": ">= 4.8.0"
+    "typescript": ">=4.8.0 <5.3.0"
   },
   "stackblitzs": {
     "startCommand": "npm run prepare && npm run build && npm run build:test && npm run test"
