--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "5.3.0-dev.20231122",
+  "version": "5.3.0-dev.20231123",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -81,7 +81,7 @@
     "randexp": "^0.5.3"
   },
   "peerDependencies": {
-    "typescript": ">=4.8.0 <5.3.0"
+    "typescript": ">=4.8.0 <5.4.0"
   },
   "devDependencies": {
     "@fastify/type-provider-typebox": "^3.5.0",
@@ -128,7 +128,7 @@
     "ts-node": "^10.9.1",
     "ts-patch": "^3.0.2",
     "tstl": "^2.5.13",
-    "typescript": "5.2.2",
+    "typescript": "^5.3.2",
     "typescript-transform-paths": "^3.4.6",
     "uuid": "^8.3.2",
     "zod": "^3.19.1"
