--- a/packages/benchmark/package.json
+++ b/packages/benchmark/package.json
@@ -72,7 +72,7 @@
     "source-map-support": "^0.5.21",
     "suppress-warnings": "^1.0.2",
     "tstl": "^2.5.13",
-    "typia": "D:\\github\\samchon\\typia\\typia-5.3.0-dev.20231122.tgz",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "typia": "D:\\github\\samchon\\typia\\typia-5.3.0-dev.20231122.tgz"
   }
 }
