--- a/debug/package.json
+++ b/debug/package.json
@@ -15,6 +15,6 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "typia": "../typia-6.5.0.tgz"
+    "typia": "../typia-6.5.3-dev.20240720.tgz"
   }
 }
