--- a/website/package.json
+++ b/website/package.json
@@ -26,6 +26,7 @@
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.12.0",
     "@rollup/browser": "^4.13.0",
+    "@samchon/openapi": "^0.4.3",
     "lz-string": "^1.5.0",
     "monaco-editor": "^0.50.0",
     "next": "^14.2.3",
