--- a/package.json
+++ b/package.json
@@ -68,9 +68,11 @@
   "homepage": "https://typia.io",
   "dependencies": {
     "@samchon/openapi": "^0.4.3",
+    "citty": "^0.1.6",
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
     "inquirer": "^8.2.5",
+    "package-manager-detector": "^0.1.0",
     "randexp": "^0.5.3"
   },
   "peerDependencies": {
