--- a/package.json
+++ b/package.json
@@ -69,9 +69,7 @@
   "dependencies": {
     "@samchon/openapi": "^0.4.3",
     "citty": "^0.1.6",
-    "commander": "^10.0.0",
     "consola": "^3.2.3",
-    "inquirer": "^8.2.5",
     "jsonc-parser": "^3.3.1",
     "magic-string": "^0.30.11",
     "package-manager-detector": "^0.1.0",
@@ -85,7 +83,6 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/inquirer": "^8.2.5",
     "@types/node": "^18.15.12",
     "@types/ts-expose-internals": "npm:ts-expose-internals@5.5.3",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
@@ -96,6 +93,7 @@
     "rollup": "^4.18.0",
     "suppress-warnings": "^1.0.2",
     "ts-node": "^10.9.2",
+    "tslib": "^2.6.3",
     "typescript": "^5.5.4"
   },
   "stackblitz": {
