--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "jsonc-parser": "^3.3.1",
     "magic-string": "^0.30.11",
     "package-manager-detector": "^0.1.0",
-    "randexp": "^0.5.3"
+    "randexp": "^0.5.3",
+    "tinyglobby": "^0.2.2"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.6.0"
