--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:bun": "bun run deploy/bun.ts",
     "test:template": "npm run --tag test --template",
     "-------------------------------------------------": "",
-    "cli": "node ./bin/typia.mjs",
+    "cli": "./bin/typia.mjs",
     "----------------------------------------------": "",
     "build": "rimraf lib && tsc && rollup -c",
     "dev": "rimraf lib && tsc --watch",
