--- a/debug/package.json
+++ b/debug/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "tstl": "^3.0.0",
-    "typia": "../typia-6.8.0-dev.20240811.tgz",
+    "typia": "../typia-6.8.0.tgz",
     "uuid": "^10.0.0"
   }
 }
