--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "homepage": "https://typia.io",
   "dependencies": {
     "@samchon/openapi": "^0.4.9",
+    "cleye": "^1.3.2",
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
     "inquirer": "^8.2.5",
@@ -105,6 +106,5 @@
     "lib",
     "bin",
     "src"
-  ],
+  ]
 }
-
