--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "cleye": "^1.3.2",
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
+    "consola": "^3.2.3",
     "inquirer": "^8.2.5",
     "randexp": "^0.5.3"
   },
