--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "comment-json": "^4.2.3",
     "consola": "^3.2.3",
     "inquirer": "^8.2.5",
-    "randexp": "^0.5.3"
+    "randexp": "^0.5.3",
+    "tinyglobby": "^0.2.5"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.6.0"
