--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "typia",
-  "version": "6.10.0-dev.20240910",
+  "version": "6.10.0-dev.20240910-2",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "module": "lib/index.mjs",
   "bin": {
-    "typia": "./bin/typia.mjs"
+    "typia": "./lib/executable/typia.js"
   },
   "tsp": {
     "tscOptions": {
@@ -18,10 +18,8 @@
     "test:bun": "bun run deploy/bun.ts",
     "test:template": "npm run --tag test --template",
     "-------------------------------------------------": "",
-    "build": "rimraf lib && tsc && tsc -p ./tsconfig.cli.json && rollup -c",
-    "cli": "node  ./bin/typia.mjs",
+    "build": "rimraf lib && tsc && rollup -c",
     "dev": "rimraf lib && tsc --watch",
-    "dev:cli": "ts-node ./src/index.ts",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
     "prettier": "prettier src --write",
@@ -70,13 +68,11 @@
   "homepage": "https://typia.io",
   "dependencies": {
     "@samchon/openapi": "^1.0.0",
-    "cleye": "^1.3.2",
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
-    "consola": "^3.2.3",
+    "inquirer": "^8.2.5",
     "package-manager-detector": "^0.2.0",
-    "randexp": "^0.5.3",
-    "tinyglobby": "^0.2.5"
+    "randexp": "^0.5.3"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.6.0"
@@ -108,8 +104,7 @@
     "README.md",
     "package.json",
     "lib",
-    "bin",
     "src"
   ],
-  "private": false
+  "private": true
 }
