--- a/debug/package.json
+++ b/debug/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "tstl": "^3.0.0",
-    "typia": "../typia-6.10.0.tgz",
+    "typia": "../typia-6.10.0-dev.20240910-2.tgz",
     "uuid": "^10.0.0"
   }
 }
