--- a/website/package.json
+++ b/website/package.json
@@ -38,8 +38,8 @@
     "react-dom": "^18.2.0",
     "tgrid": "^1.0.3",
     "tstl": "^3.0.0",
-    "typescript": "^5.5.4",
-    "typia": "^6.10.0-dev.20240910"
+    "typescript": "^5.6.2",
+    "typia": "^6.10.0"
   },
   "devDependencies": {
     "@rspack/cli": "^1.0.0",
