--- a/debug/package.json
+++ b/debug/package.json
@@ -16,9 +16,8 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "@samchon/openapi": "^1.0.5",
     "tstl": "^3.0.0",
-    "typia": "../typia-6.10.2.tgz",
+    "typia": "../typia-6.10.4-dev.20240925.tgz",
     "uuid": "^10.0.0"
   }
 }
