--- a/errors/package.json
+++ b/errors/package.json
@@ -32,6 +32,6 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "typia": "../typia-6.10.4-dev.20240925.tgz"
+    "typia": "../typia-6.11.1.tgz"
   }
 }
