--- a/website/compiler-dependencies/package.json
+++ b/website/compiler-dependencies/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "typia": "../../typia.tgz",
     "@autobe/interface": "latest",
-    "@samchon/openapi": "latest"
+    "@samchon/openapi": "latest",
+    "@types/uuid": "latest",
+    "uuid": "latest"
   }
 }
