--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,7 @@ jobs:
         run: pnpm install
 
       - name: Build Packages
+        run: pnpm run build
+
+      - name: Run Tests
         run: pnpm run test
