--- a/packages/openapi/tsconfig.json
+++ b/packages/openapi/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../../internals/config/tsconfig.json",
+  "compilerOptions": {
+    "outDir": "lib",
+  },
   "include": ["src"],
 }
