--- a/packages/typia/package.json
+++ b/packages/typia/package.json
@@ -3,11 +3,6 @@
   "version": "11.0.1",
   "description": "Superfast runtime validators with only one line",
   "main": "src/index.ts",
-  "exports": {
-    ".": "./src/index.ts",
-    "./lib/transform": "./src/transform/index.ts",
-    "./package.json": "./package.json"
-  },
   "bin": {
     "typia": "./lib/executable/typia.js"
   },
@@ -125,21 +120,6 @@
     "access": "public",
     "main": "lib/index.js",
     "typings": "lib/index.d.ts",
-    "module": "lib/index.mjs",
-    "exports": {
-      ".": {
-        "types": "./lib/index.d.ts",
-        "import": "./lib/index.mjs",
-        "require": "./lib/index.js",
-        "default": "./lib/index.js"
-      },
-      "lib/transform": {
-        "types": "./lib/transform/index.d.ts",
-        "import": "./lib/transform/index.mjs",
-        "require": "./lib/transform/index.js",
-        "default": "./lib/transform/index.js"
-      },
-      "./package.json": "./package.json"
-    }
+    "module": "lib/index.mjs"
   }
 }
